tests/sksl/errors/ArraySplitDimensionsInFuncDecl.dsl.glsl
### Compilation failed:

error: arrays are not yet fully supported
error: expected an identifier, but found '2'
2 errors
